--- a/attention-game/style.css
+++ b/attention-game/style.css
@@ -15,6 +15,7 @@ body {
 
 h1 {
     font-size: 64px;
+    font-style: arial;
 }
 
 h2 {
@@ -51,3 +52,4 @@ input, textarea {
     padding: 6px;
     font-size: 14px;
 }
+
